# cryoto-quant-trading-system

./: CMakeLists.txt  README.md  pyproject.toml
.cache/clangd/index/: Candle.hpp.17AA6FF3829AA945.idx  Candle.hpp.675E2B7902A301A6.idx  CandleStream.cpp.9BE33D617D9BC5B1.idx  CandleStream.cpp.FB72407A243924C1.idx  CandleStream.hpp.119723FF2B3A0DD1.idx  CandleStream.hpp.D3970D6A49157190.idx  binance_fetch.cpp.06CE019C52608E3F.idx  binance_fetch.cpp.C602686D4252F2D0.idx  data_loader.cpp.09DE065D3F33BEAD.idx  data_loader.cpp.2C8098962A3AC712.idx  strategy_loader.cpp.A1E3A71DB7C5CF03.idx
backtesting_engine/: Candle.hpp  CandleStream.cpp  CandleStream.hpp  data_loader.cpp  data_loader.hpp  position_manager.cpp  strategy_loader.cpp  strategy_loader.hpp
data/: AAVEUSDT_1d.csv  ADAUSDT_1d.csv  ALGOUSDT_1d.csv  APTUSDT_1d.csv  ARBUSDT_1d.csv  ATOMUSDT_1d.csv  AVAXUSDT_1d.csv  BCHUSDT_1d.csv  BNBUSDT_1d.csv  BTCUSDT_1d.csv  DEXEUSDT_1d.csv  DOGEUSDT_1d.csv  DOTUSDT_1d.csv  ENAUSDT_1d.csv  ETHUSDT_1d.csv  FILUSDT_1d.csv  HBARUSDT_1d.csv  ICPUSDT_1d.csv  LINKUSDT_1d.csv  LTCUSDT_1d.csv  MNTUSDT_1d.csv  NEARUSDT_1d.csv  OMUSDT_1d.csv  ONDOUSDT_1d.csv  PEPEUSDT_1d.csv  POLUSDT_1d.csv  RENDERUSDT_1d.csv  SHIBUSDT_1d.csv  SOLUSDT_1d.csv  SUIUSDT_1d.csv  SUSDT_1d.csv  TAOUSDT_1d.csv  TIAUSDT_1d.csv  TONUSDT_1d.csv  TRUMPUSDT_1d.csv  TRXUSDT_1d.csv  UNIUSDT_1d.csv  VETUSDT_1d.csv  XLMUSDT_1d.csv  XMRUSDT_1d.csv  (+2 more)
data_ingestion/: CMakeLists.txt  binance_fetch.cpp
strategies/: loose_pants_trend_following
strategy_generation/: indicators.py  strategy_generator.py
